Added input fields and submit button to DOM

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,7 +14,23 @@
         <h1>Tim's To-Do List Task Tracker</h1>
     </header>
     <main>
-
+        <section id="inputFields">
+            <label for="task">Task:</label>
+            <input type="text" name="task" id="nameInput">
+            <label for="taskDescription">Description:</label>
+            <input type="text" name="taskDescription" id="descriptionInput">
+            <button type="submit">Add Task</button>
+        </section>
+        <section>
+            <table>
+                <tr>
+                    <th>Task</th>
+                    <th>Description</th>
+                    <th>Status</th>
+                    <th>Delete</th>
+                </tr>
+            </table>
+        </section>
     </main>
 </body>
 </html>
