Added functions to GET and display all tasks to client.js.

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -22,13 +22,7 @@
             <button type="submit">Add Task</button>
         </section>
         <section>
-            <table>
-                <tr>
-                    <th>Task</th>
-                    <th>Description</th>
-                    <th>Status</th>
-                    <th>Delete</th>
-                </tr>
+            <table id="tasksTable">
             </table>
         </section>
     </main>
