added add task functionality. New task is added to database when add task is clicked

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,8 +18,8 @@
             <label for="task">Task:</label>
             <input type="text" name="task" id="nameInput">
             <label for="taskDescription">Description:</label>
-            <input type="text" name="taskDescription" id="descriptionInput">
-            <button type="submit">Add Task</button>
+            <input name="taskDescription" id="descriptionInput">
+            <button id="submitBtn" type="submit">Add Task</button>
         </section>
         <section>
             <table id="tasksTable">
