Added functionality to dynamically created delete button. Removes task from DOM and database

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -22,7 +22,18 @@
             <button id="submitBtn" type="submit">Add Task</button>
         </section>
         <section>
-            <table id="tasksTable">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Task</th>
+                        <th>Description</th>
+                        <th>Status</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody id="tasksTableBody">
+
+                </tbody>
             </table>
         </section>
     </main>
