Fixed bug in POST where description was sending null. Added PUT functionality, when done button is pressed To-Do changes to completed.

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,7 +18,7 @@
             <label for="task">Task:</label>
             <input type="text" name="task" id="nameInput">
             <label for="taskDescription">Description:</label>
-            <input name="taskDescription" id="descriptionInput">
+            <input type="text" name="taskDescription" id="descriptionInput">
             <button id="submitBtn" type="submit">Add Task</button>
         </section>
         <section>
