Base Mode completed. Added input validation and max character length for input fields

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,9 +16,9 @@
     <main>
         <section id="inputFields">
             <label for="task">Task:</label>
-            <input type="text" name="task" id="nameInput">
+            <input type="text" name="task" maxlength="80" id="nameInput">
             <label for="taskDescription">Description:</label>
-            <input type="text" name="taskDescription" id="descriptionInput">
+            <input type="text" name="taskDescription" maxlength="250" id="descriptionInput">
             <button id="submitBtn" type="submit">Add Task</button>
         </section>
         <section>
