--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,20 +8,26 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="scripts/client.js"></script>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <title>Tim Dugan's To-Do List Application</title>
 </head>
 <body>
     <header>
-        <h1>Tim's To-Do List Task Tracker</h1>
+        <!-- <h1>Tim's To-Do List Task Tracker</h1> -->
     </header>
     <main>
         <section id="inputFields">
-            <label for="task">Task:</label>
-            <input type="text" name="task" maxlength="80" id="nameInput">
-            <label for="taskDescription">Description:</label>
-            <input type="text" name="taskDescription" maxlength="250" id="descriptionInput">
-            <button id="submitBtn" type="submit">Add Task</button>
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="nameInput" placeholder="Type the name of your task here." maxlength="80">
+                <label for="nameInput">Task</label>
+              </div>
+              <div class="form-floating">
+                <input type="text" class="form-control" id="descriptionInput" placeholder="Task description" maxlength="250">
+                <label for="descriptionInput">Description</label>
+              </div>
+            <button class="btn btn-primary" id="submitBtn" type="submit">Add Task</button>
         </section>
         <section>
             <table>
@@ -31,7 +37,7 @@
                         <th>Description</th>
                         <th>Status</th>
                         <th>Date Completed</th>
-                        <th>Delete</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody id="tasksTableBody">
